src/scss/components/_layout.scss
.docs-layout {
  max-width: $doc-site-layout-max-width;
  position: relative;

  @media (min-width: ($doc-site-layout-max-width + 2rem)) {
    margin: 2rem auto;
  }

  @media (min-width: $doc-site-mobile-breakpoint) {
    display:-ms-grid;
    display: grid;
    -ms-grid-columns: 300px 1fr;
    grid-template-columns: 300px 1fr;
    grid-template-rows: 188px 1fr;
  }
}

.docs-layout__header {
  padding: 1rem;

  @media (min-width: $doc-site-mobile-breakpoint) {
    align-self: start;
    -ms-grid-column: 1;
    -ms-grid-column-span: 2;
    grid-column: span 2;
    -ms-grid-row: 1;
    grid-row: 1 / 2;
    padding: 2rem;
  }
}

.docs-layout__side-bar {
  display: none;

  @media (min-width: $doc-site-mobile-breakpoint) {
    display: block;
    padding: 2rem;
    -ms-grid-column: 1;
    -ms-grid-row: 2;
    grid-row: 2 / 3;
  }
}

.docs-layout__side-bar-mobile--visible {
  background-color: $sprk-gray;
  box-shadow: $sprk-card-shadow;
  padding: 2rem;
  display: block;
  position: absolute;
  top: 93px;
  width: 100%;
  z-index: 2;
}

.docs-layout__content {
  padding: 2rem;
  margin: 0 auto;
  width: 100%;

  @media (min-width: $doc-site-mobile-breakpoint) {
    overflow-x: scroll;
    -ms-grid-column: 2;
    -ms-grid-row: 2;
    grid-row: 2 / 3;
  }
}

// gatsby-remark-sectionize creates the sections from md
.docs-layout__content section,
.docs-layout__content .docs-b-h2,
.docs-layout__content .docs-b-h3 {
  padding-top: $sprk-space-l;
}

